[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/ui/building_menu.gd" type="Script" id=1]

[node name="BuildingMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -800.0
margin_bottom = -500.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 200.0
margin_bottom = 220.0

[node name="TitleLabel" type="Label" parent="Panel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 390.0
margin_bottom = 40.0
text = "Available Buildings"
align = 1
valign = 1

[node name="BuildingGrid" type="GridContainer" parent="Panel"]
margin_left = 10.0
margin_top = 50.0
margin_right = 390.0
margin_bottom = 280.0
columns = 3

[node name="CloseButton" type="Button" parent="Panel"]
margin_left = 370.0
margin_top = 10.0
margin_right = 390.0
margin_bottom = 30.0
text = "X"